--- a/css/main.css
+++ b/css/main.css
@@ -798,7 +798,7 @@ ul.color_schemes li {
 .couple__image-groom--left::after {
   top: -60px;
   left: 60px;
-  background-image: url("http://placehold.it/352x432"); }
+  background-image: url("https://media-cdn.tripadvisor.com/media/photo-s/1d/0e/1a/d3/guildhall.jpg"); }
 
 .couple__image-bride--right::after {
   top: -60px;
