--- a/css/main.css
+++ b/css/main.css
@@ -444,8 +444,8 @@ ul.color_schemes li {
   width: 100%;
   height: 740px;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(97, 88, 105, 0.35)), to(rgba(97, 88, 105, 0.35))), url(http://placehold.it/1440x740);
-  background: -o-linear-gradient(rgba(97, 88, 105, 0.35), rgba(97, 88, 105, 0.35)), url(http://placehold.it/1440x740);
-  background: linear-gradient(rgba(97, 88, 105, 0.35), rgba(97, 88, 105, 0.35)), url(http://placehold.it/1440x740);
+  background: -o-linear-gradient(rgba(97, 88, 105, 0.35), rgba(97, 88, 105, 0.35)), url(https://photos.app.goo.gl/5spht4yV7zbpLCBp9);
+  background: linear-gradient(rgba(97, 88, 105, 0.35), rgba(97, 88, 105, 0.35)), url(https://photos.app.goo.gl/5spht4yV7zbpLCBp9);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover; }
