--- a/css/main.css
+++ b/css/main.css
@@ -444,8 +444,8 @@ ul.color_schemes li {
   width: 100%;
   height: 740px;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(97, 88, 105, 0.35)), to(rgba(97, 88, 105, 0.35))), url(http://placehold.it/1440x740);
-  background: -o-linear-gradient(rgba(97, 88, 105, 0.35), rgba(97, 88, 105, 0.35)), url(https://photos.app.goo.gl/5spht4yV7zbpLCBp9);
-  background: linear-gradient(rgba(97, 88, 105, 0.35), rgba(97, 88, 105, 0.35)), url(https://photos.app.goo.gl/5spht4yV7zbpLCBp9);
+  background: -o-linear-gradient(rgba(97, 88, 105, 0.35), rgba(97, 88, 105, 0.35)), url(http://placehold.it/1440x740);
+  background: linear-gradient(rgba(97, 88, 105, 0.35), rgba(97, 88, 105, 0.35)), url(http://placehold.it/1440x740);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover; }
@@ -551,7 +551,8 @@ ul.color_schemes li {
   line-height: 132px;
   padding-bottom: 16px;
   text-transform: capitalize;
-  white-space: nowrap; }
+  white-space: nowrap; 
+  background-image: url("https://photos.app.goo.gl/4TbAySsBWxnWPax77");}
 
 .header__subtitle {
   font-family: "Playfair Display", serif;
