--- a/css/main.css
+++ b/css/main.css
@@ -443,9 +443,9 @@ ul.color_schemes li {
   position: relative;
   width: 100%;
   height: 740px;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(97, 88, 105, 0.35)), to(rgba(97, 88, 105, 0.35))), url(https://photos.app.goo.gl/4TbAySsBWxnWPax77);
-  background: -o-linear-gradient(rgba(97, 88, 105, 0.35), rgba(97, 88, 105, 0.35)), url(https://photos.app.goo.gl/4TbAySsBWxnWPax77);
-  background: linear-gradient(rgba(97, 88, 105, 0.35), rgba(97, 88, 105, 0.35)), url(https://photos.app.goo.gl/4TbAySsBWxnWPax77);
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(97, 88, 105, 0.35)), to(rgba(97, 88, 105, 0.35))), url(http://placehold.it/1440x740);
+  background: -o-linear-gradient(rgba(97, 88, 105, 0.35), rgba(97, 88, 105, 0.35)), url(http://placehold.it/1440x740);
+  background: linear-gradient(rgba(97, 88, 105, 0.35), rgba(97, 88, 105, 0.35)), url(http://placehold.it/1440x740);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover; }
