--- a/css/main.css
+++ b/css/main.css
@@ -1719,6 +1719,7 @@ ul.color_schemes li {
     content: "";
     position: absolute;
     bottom: 0;
+    left: -50%;
     -webkit-transform: translateX(50%);
         -ms-transform: translateX(50%);
             transform: translateX(50%);
