--- a/css/main.css
+++ b/css/main.css
@@ -1705,6 +1705,7 @@ ul.color_schemes li {
     width: 280px; } }
 
 /* 1.6 END RVSP media*/
+/*1.7 Support*/
 .support__title {
   font-family: "Playfair Display", serif;
   font-weight: 700;
