--- a/css/main.css
+++ b/css/main.css
@@ -1337,7 +1337,9 @@ ul.color_schemes li {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  color: #615869; }
+  color: #615869; 
+  text-align: left;
+}
 
 .venues__card-link {
   font-family: "Playfair Display", serif;
