--- a/css/main.css
+++ b/css/main.css
@@ -447,7 +447,7 @@ ul.color_schemes li {
   background: -o-linear-gradient(rgba(97, 88, 105, 0.35), rgba(97, 88, 105, 0.35)), url(/img/header/us.jpg);
   background: linear-gradient(rgba(97, 88, 105, 0.35), rgba(97, 88, 105, 0.35)), url(/img/header/us.jpg);
   background-repeat: no-repeat;
-  background-position: center top;
+  background-position: top left;
   background-size: cover; }
 
 .header__nav {
@@ -1885,7 +1885,7 @@ img{
   max-width: 100%;
   height: auto;
 }
-.image-link{
+.image-link img{
   padding: 3px;
   border: 1px solid #fff;
   box-shadow: 0px 4px 16px #ddd;
@@ -1895,9 +1895,15 @@ img{
 @media only screen and (max-width: 1030px) {
   .venues{
     padding-top:60px!important;
+    padding-bottom:60px!important;
   }
   .address__map{
     height: auto!important;
     margin-bottom: 30px;
+  }
+}
+@media only screen and (max-width: 550px) {
+  .header {
+    height:350px!important;
   }
 }
