--- a/css/main.css
+++ b/css/main.css
@@ -1902,6 +1902,19 @@ img{
     margin-bottom: 30px;
   }
 }
+header {
+  height:600px!important;
+}
+@media only screen and (max-width: 1000px) {
+  .header {
+    height:500px!important;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .header {
+    height:400px!important;
+  }
+}
 @media only screen and (max-width: 550px) {
   .header {
     height:350px!important;
