--- a/css/main.css
+++ b/css/main.css
@@ -1902,8 +1902,10 @@ img{
     margin-bottom: 30px;
   }
 }
-header {
-  height:600px!important;
+@media only screen and (max-width: 1400px) {
+  .header {
+    height:600px!important;
+  }
 }
 @media only screen and (max-width: 1000px) {
   .header {
