--- a/css/main.css
+++ b/css/main.css
@@ -1890,7 +1890,7 @@ img{
   border: 1px solid #fff;
   box-shadow: 0px 4px 16px #ddd;
 }
-
+.venues__card-data{text-align: left;}
 
 @media only screen and (max-width: 1030px) {
   .venues{
